T4 has been added

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 tareas/01/.ipynb_checkpoints/
 tareas/02/.ipynb_checkpoints/
 tareas/03/.ipynb_checkpoints/
+tareas/04/.ipynb_checkpoints/
 competencias/01/.ipynb_checkpoints/
