--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ tareas/02/.ipynb_checkpoints/
 tareas/03/.ipynb_checkpoints/
 tareas/04/.ipynb_checkpoints/
 competencias/01/.ipynb_checkpoints/
+competencias/02/.ipynb_checkpoints/
